--- a/homepage-frontend/css/projects.scss
+++ b/homepage-frontend/css/projects.scss
@@ -33,6 +33,14 @@
 				display: flex;
 				flex-direction: row;
 				justify-content: space-between;
+
+				& > .description {
+					flex-shrink: 1;
+				}
+
+				& > .link {
+					flex-shrink: 1;
+				}
 			}
 		}
 	}
